primera version que funciona con worlwind